new endpoint to get all images for an album
